--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,12 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  /* Body background color */
+  --bodyBgColor-dark: #020617;
+  --bodyBgColor-light: #ffffff;
+  --bodyBgColor: var(--bodyBgColor-light);
+}
+
+[data-theme="dark"] {
+  --bodyBgColor: var(--bodyBgColor-dark);
 }
 
 * {
@@ -16,6 +19,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  background: var(--bodyBgColor);
 }
 
 a {
