--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,46 @@
 :root {
+  --displayFlex: flex;
+  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   /* Body background color */
   --bodyBgColor-dark: #020617;
   --bodyBgColor-light: #ffffff;
   --bodyBgColor: var(--bodyBgColor-light);
+  /* Navbar background color */
+  --navBarBgColor-dark: #010409;
+  --navBarBgColor-light: #ffffff;
+  --navBarBgColor: var(--navBarBgColor-light);
+  /* Navbar border color */
+  --navBarBorderColor-dark: #374151;
+  --navBarBorderColor-light: #e5e7eb;
+  --navBarBorderColor: var(--navBarBorderColor-light);
+  /* Navbar link color */
+  --navBarListItemColor-dark: #e6edf3;
+  --navBarListItemColor-light: #242424;
+  --navBarListItemColor: var(--navBarListItemColor-light);
 }
 
 [data-theme="dark"] {
   --bodyBgColor: var(--bodyBgColor-dark);
+  --navBarBgColor: var(--navBarBgColor-dark);
+  --navBarBorderColor: var(--navBarBorderColor-dark);
+  --navBarListItemColor: var(--navBarListItemColor-dark);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
+  font-family: var(--font-sans);
   background: var(--bodyBgColor);
 }
 
