Add authLinks component

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,7 @@ a {
   margin-right: auto;
   padding-left: 80px;
   padding-right: 80px;
-  background-color: red;
+  /* background-color: purple; */
 }
 
 @media screen and (max-width: 1536px) {
