--- a/components/navBar/navbar.module.css
+++ b/components/navBar/navbar.module.css
@@ -1,4 +1,43 @@
-.navBar {
+.container {
+  display: flex;
+  height: 57px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  flex: 1;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.searchBar {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.links {
+  flex: 1;
+  gap: 20px;
+  display: flex;
+  font-size: 14px;
+  font-weight: 400;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.links img {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  margin-right: 8px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+/* .navBar {
   top: 0;
   width: 100%;
   height: 57px;
@@ -42,4 +81,4 @@
   font-size: 14px;
   font-weight: 400;
   color: var(--navBarListItemColor);
-}
+} */
