--- a/app/globals.css
+++ b/app/globals.css
@@ -124,5 +124,7 @@ a {
 @media screen and (max-width: 640px) {
   .wrapper {
     max-width: 475px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
