--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,7 @@
-/* .main {
+.container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+  padding-top: 5rem;
   min-height: 100vh;
-} */
+  align-items: center;
+  flex-direction: column;
+}
