--- a/components/searchBar/searchbar.module.css
+++ b/components/searchBar/searchbar.module.css
@@ -50,3 +50,15 @@
   opacity: 1;
   color: var(--searchBarIconFocus);
 }
+
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
+}
