--- a/components/headerAvatar/headeravatar.module.css
+++ b/components/headerAvatar/headeravatar.module.css
@@ -1,19 +1,21 @@
 .profile img {
   width: 32px;
   height: 32px;
+  display: flex;
   cursor: pointer;
   object-fit: cover;
   border-radius: 50%;
   position: relative;
+  align-items: center;
 }
 
 .settingsMenu {
-  top: 56px;
+  top: 63px;
   right: 10px;
   width: 264px;
   position: absolute;
   border-radius: 6px;
-  height: calc(90vh - 56px);
+  height: calc(90vh - 63px);
   transition: all 0.3s ease;
   background-color: var(--settingsMenuBg);
   border: 1px solid var(--settingsMenuBorder);
@@ -23,7 +25,7 @@
   top: -6px;
   z-index: -1;
   content: "";
-  right: 25px;
+  right: 14px;
   width: 12px;
   height: 12px;
   position: absolute;
@@ -31,41 +33,21 @@
   background-color: var(--settingsMenuBefore);
 }
 
-/* Mobile */
-@media (max-width: 480px) {
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
   .settingsMenu::before {
-    right: 14px;
+    right: 38px;
   }
 }
 
-/* Extra small devices */
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 992px) {
 }
 
-/* Small tablets */
-@media (min-width: 768px) and (max-width: 991px) {
-}
-
-/* Large tablets/laptops */
-@media (min-width: 992px) and (max-width: 1199px) {
-  .profile img {
-    width: 36px;
-    height: 36px;
-  }
-}
-
-/* Desktops */
-@media (min-width: 1200px) and (max-width: 1919px) {
-  .profile img {
-    width: 36px;
-    height: 36px;
-  }
-}
-
-/* Extra large screens */
-@media (min-width: 1920px) {
-  .profile img {
-    width: 64px;
-    height: 64px;
+@media (min-width: 1200px) {
+  .settingsMenu {
+    top: 69px;
+    height: calc(90vh - 69px);
   }
 }
