--- a/components/searchIcon/searchicon.module.css
+++ b/components/searchIcon/searchicon.module.css
@@ -3,7 +3,7 @@
 }
 
 .content {
-  top: 57px;
+  top: 68px;
   left: 0px;
   width: 100%;
   height: 57px;
@@ -14,4 +14,16 @@
   justify-content: center;
   background-color: var(--navBarBgColor);
   border-bottom: 1px solid var(--navBarBorderColor);
+}
+
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
 }
