--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  max-height: inherit;
+}
+
 .container {
   width: 100%;
   margin-left: auto;
