--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,7 @@
   display: flex;
   padding-top: 5rem;
   min-height: 100vh;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
 }
 
