--- a/components/postsList/postslist.module.css
+++ b/components/postsList/postslist.module.css
@@ -1,3 +1,31 @@
 .container {
   flex: 5;
 }
+
+.title {
+  margin: 0;
+  font-weight: 700;
+  text-align: center;
+  color: var(--featuredPostHeader);
+}
+
+.posts {
+  margin: 30px 0;
+}
+
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 30px;
+    line-height: 120%;
+    text-align: left;
+  }
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
+}
