--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,18 @@
   --postDesc-dark: #d1d5db;
   --postDesc-light: #999999;
   --postDesc: var(--postDesc-light);
+  /* Post cartegory background*/
+  --postCategoryBg-dark: #1b1e2e;
+  --postCategoryBg-light: #f2f2f2;
+  --postCategoryBg: var(--postCategoryBg-light);
+  /* Post cartegory text*/
+  --postCategory-dark: #7e869a;
+  --postCategory-light: #242424;
+  --postCategory: var(--postCategory-light);
+  /* Post icons*/
+  --postIcons-dark: #7e869a;
+  --postIcons-light: #b4b4b4;
+  --postIcons: var(--postIcons-light);
 }
 
 [data-theme="dark"] {
@@ -105,6 +117,9 @@
   --featuredModifiedDate: var(--featuredModifiedDate-dark);
   --postHeader: var(--postHeader-dark);
   --postDesc: var(--postDesc-dark);
+  --postCategoryBg: var(--postCategoryBg-dark);
+  --postCategory: var(--postCategory-dark);
+  --postIcons: var(--postIcons-dark);
 }
 
 * {
