--- a/components/postsList/postslist.module.css
+++ b/components/postsList/postslist.module.css
@@ -5,7 +5,7 @@
 .title {
   margin: 0;
   font-weight: 700;
-  text-align: center;
+  /* text-align: center; */
   color: var(--featuredPostHeader);
 }
 
