--- a/components/sideBarMenu/sidebarmenu.module.css
+++ b/components/sideBarMenu/sidebarmenu.module.css
@@ -1,3 +1,22 @@
 .container {
   flex: 2;
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .container {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+  .container {
+    display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
 }
