--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,12 +1,8 @@
 .container {
-  display: flex;
   padding-top: 5rem;
-  min-height: 100vh;
-  /* align-items: center; */
-  flex-direction: column;
 }
 
-.content {
-  gap: 50px;
+.main {
+  gap: 30px;
   display: flex;
 }
