--- a/components/sideBarMenu/sidebarmenu.module.css
+++ b/components/sideBarMenu/sidebarmenu.module.css
@@ -3,6 +3,20 @@
   display: none;
 }
 
+.content {
+  height: 90vh;
+  padding: 0 8px;
+  overflow: hidden;
+  border-bottom: 1px solid var(--postBorder);
+}
+
+.title {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--featuredPostHeader);
+}
+
 @media (min-width: 576px) {
   .container {
     display: none;
@@ -21,8 +35,7 @@
     position: sticky;
     overflow-y: auto;
     flex-direction: column;
-    height: calc(90vh - 75px);
-    background-color: #f0f0f0;
+    height: calc(95vh - 75px);
   }
 }
 
