--- a/components/mostPopular/mostpopular.module.css
+++ b/components/mostPopular/mostpopular.module.css
@@ -1,5 +1,4 @@
 .container {
-  height: 200px;
   display: flex;
   margin-bottom: 16px;
   flex-direction: column;
@@ -21,9 +20,9 @@
 .textContainer {
   gap: 5px;
   display: flex;
-  margin-bottom: 20px;
+  padding: 3px 0;
   flex-direction: column;
-  /* background-color: red; */
+  border-bottom: 1px solid var(--postBorder);
 }
 
 .category {
@@ -37,22 +36,21 @@
 }
 
 .postTitle {
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 21px;
-  color: var(--postHeader);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  color: var(--sideBarPostTitle);
 }
 
 .details {
   gap: 20px;
   display: flex;
   align-items: center;
-  color: var(--featuredAuthorName);
+  color: var(--sideBarPostDetails);
 }
 
 .username {
   font-size: 12px;
-  color: var(--featuredAuthorName);
 }
 
 .DetailIcon {
