--- a/components/sideBarMenu/sidebarmenu.module.css
+++ b/components/sideBarMenu/sidebarmenu.module.css
@@ -4,8 +4,7 @@
 }
 
 .content {
-  height: 90vh;
-  padding: 0 8px;
+  height: 80vh;
   overflow: hidden;
   border-bottom: 1px solid var(--postBorder);
 }
@@ -15,6 +14,13 @@
   font-size: 16px;
   font-weight: 700;
   color: var(--featuredPostHeader);
+}
+
+.sticky {
+  top: 90px;
+  position: -webkit-sticky;
+  position: sticky;
+  height: calc(90vh - 75px);
 }
 
 @media (min-width: 576px) {
@@ -28,14 +34,9 @@
 
 @media (min-width: 992px) {
   .container {
-    top: 95px;
-    padding: 0;
+    padding: 0 8px;
     display: flex;
-    position: -webkit-sticky;
-    position: sticky;
-    overflow-y: auto;
     flex-direction: column;
-    height: calc(95vh - 75px);
   }
 }
 
