--- a/components/sideBarMenu/sidebarmenu.module.css
+++ b/components/sideBarMenu/sidebarmenu.module.css
@@ -23,6 +23,13 @@
   height: calc(90vh - 75px);
 }
 
+.themeSwitcher {
+  bottom: 0;
+  width: 100%;
+  padding: 8px 0;
+  position: absolute;
+}
+
 @media (min-width: 576px) {
   .container {
     display: none;
