--- a/components/feedsTab/feedstab.module.css
+++ b/components/feedsTab/feedstab.module.css
@@ -5,8 +5,8 @@
 .tabs {
   top: 68px;
   display: flex;
-  align-items: center;
   padding: 15px 0;
+  align-items: center;
   position: -webkit-sticky;
   position: sticky;
   background-color: var(--bodyBgColor);
@@ -28,16 +28,17 @@
   font-weight: 500;
   text-decoration: none;
   padding-bottom: 17px;
-  color: #6b6b6b;
+  color: var(--feedsTabNavLink);
 }
 
 .tabs a:hover {
-  color: #242424;
+  color: var(--feedsActiveTabLink);
 }
 
 .tabs a.active {
-  color: #242424;
-  border-bottom: 1px solid #242424;
+  font-weight: 700;
+  color: var(--feedsActiveTabLink);
+  border-bottom: 1px solid var(--feedsActiveTabLink);
 }
 
 .content {
