--- a/components/feedsTab/feedstab.module.css
+++ b/components/feedsTab/feedstab.module.css
@@ -26,8 +26,9 @@
   cursor: pointer;
   font-size: 14px;
   font-weight: 500;
-  text-decoration: none;
   padding-bottom: 17px;
+  text-decoration: none;
+  transition: all 0.5s ease-in;
   color: var(--feedsTabNavLink);
 }
 
@@ -37,6 +38,7 @@
 
 .tabs a.active {
   font-weight: 700;
+  transition: all 0.5s ease-in;
   color: var(--feedsActiveTabLink);
   border-bottom: 1px solid var(--feedsActiveTabLink);
 }
