--- a/components/authorCard/authorcard.module.css
+++ b/components/authorCard/authorcard.module.css
@@ -3,7 +3,7 @@
   margin-bottom: 16px;
   padding: 20px 16px;
   flex-direction: column;
-  background-color: #f9f9f9;
+  background-color: var(--authorCardBg);
 }
 
 .authorDetails {
@@ -27,16 +27,17 @@
 }
 
 .author {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 800;
   letter-spacing: 2px;
   text-transform: uppercase;
+  color: var(--theAuthor);
 }
 
 .authorName {
   font-size: 16px;
   font-weight: 500;
-  color: #2f1c6a;
+  color: var(--featuredAuthorName);
 }
 
 .follow {
@@ -62,12 +63,12 @@
 .authorBio {
   font-size: 16px;
   margin-top: 20px;
-  color: #737373;
+  color: var(--authorBio);
 }
 
 .containerFooter {
-  gap: 25px;
   display: flex;
+  flex-wrap: wrap;
   margin-top: 20px;
   align-items: center;
 }
@@ -81,15 +82,18 @@
   text-decoration: underline;
 }
 
-.followers {
-  font-size: 13px;
-  color: #242424;
+.ball {
+  margin: 0 8px;
+  color: var(--featuredModifiedDate);
 }
 
 @media (min-width: 576px) {
 }
 
 @media (min-width: 768px) {
+  .author {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 992px) {
