--- a/components/authorCard/authorcard.module.css
+++ b/components/authorCard/authorcard.module.css
@@ -22,7 +22,7 @@
 .authorInfo {
   flex: 1;
   display: flex;
-  margin-left: 10px;
+  margin-left: 20px;
   flex-direction: column;
 }
 
@@ -41,15 +41,26 @@
 }
 
 .follow {
-  flex: 1;
   display: flex;
+  margin-top: 10px;
   align-items: center;
-  justify-content: flex-end;
+}
+
+.follow button {
+  outline: 0;
+  cursor: pointer;
+  padding: 5px 12px;
+  width: max-content;
+  border-radius: 6px;
+  align-items: center;
+  justify-content: center;
+  background-color: inherit;
+  border: 1px solid var(--navBarBorderColor);
 }
 
 .button {
   outline: 0;
-  display: flex;
+  display: none;
   cursor: pointer;
   padding: 5px 12px;
   width: max-content;
@@ -91,8 +102,17 @@
 }
 
 @media (min-width: 768px) {
+  .authorInfo {
+    margin-left: 10px;
+  }
   .author {
     font-size: 16px;
+  }
+  .follow {
+    display: none;
+  }
+  .button {
+    display: flex;
   }
 }
 
