--- a/components/textArea/textarea.module.css
+++ b/components/textArea/textarea.module.css
@@ -1,7 +1,13 @@
 .container {
   display: flex;
+  margin-bottom: 20px;
   flex-direction: column;
-  margin-bottom: 30px;
+}
+
+.noMarginBottom {
+  display: flex;
+  margin-bottom: 2px;
+  flex-direction: column;
 }
 
 .textarea {
