--- a/components/commentCard/commentcard.module.css
+++ b/components/commentCard/commentcard.module.css
@@ -1,13 +1,35 @@
 .comment {
   display: flex;
-  padding-top: 30px;
-  padding-bottom: 8px;
+  position: relative;
+  padding: 15px 0 8px 0;
   flex-direction: column;
   border-bottom: 1px solid var(--postBorder);
 }
 
 .comment:first-child {
   padding-top: 0px;
+}
+
+.comment.hasReplies {
+  border-radius: 0 0 0px 10px;
+  border-bottom: 1px solid var(--postBorder);
+}
+
+.comment.hasReplies::before {
+  top: 32px;
+  left: 0px;
+  width: 10px;
+  content: "";
+  position: absolute;
+  border-radius: 0 0 0px 10px;
+  min-height: calc(100% - 32px);
+  border-left: 1px solid var(--postBorder);
+}
+
+.comment.hasReplies:last-child,
+.comment.hasReplies .comment:last-child {
+  border-bottom: 0;
+  padding-bottom: 0;
 }
 
 .userDetails {
@@ -41,14 +63,14 @@
 }
 
 .desc {
-  margin: 8px 0;
   font-size: 16px;
+  margin: 8px 0 8px 40px;
   color: var(--singlePostDesc);
 }
 
 .dataContainer {
   display: flex;
-  padding: 0px 8px;
+  margin-left: 40px;
   align-items: center;
   color: var(--slugPostData);
   justify-content: space-between;
@@ -83,7 +105,7 @@
 }
 
 .repliesContainer {
-  margin-top: 8px;
-  padding-top: 0px;
-  margin-left: 40px;
+  padding-top: 15px;
+  margin: 8px 0 0 40px;
+  border-top: 1px solid var(--postBorder);
 }
