--- a/components/textArea/textarea.module.css
+++ b/components/textArea/textarea.module.css
@@ -6,7 +6,7 @@
 
 .isReplying {
   display: flex;
-  margin: 0 0 2px 40px;
+  margin: 0 0 2px 20px;
   flex-direction: column;
 }
 
@@ -43,4 +43,19 @@
   justify-content: center;
   background-color: inherit;
   border: 1px solid var(--navBarBorderColor);
+}
+
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+  .isReplying {
+    margin: 0 0 2px 30px;
+  }
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
 }
