--- a/app/auth/login/login.module.css
+++ b/app/auth/login/login.module.css
@@ -122,6 +122,13 @@
   background-color: #1c1917;
 }
 
+.button .span {
+  display: flex;
+  padding: 0 8px;
+  flex: 0 0 100px;
+  align-items: center;
+}
+
 @media (min-width: 576px) {
 }
 
